--- a/templates/exibir_entradas.html
+++ b/templates/exibir_entradas.html
@@ -1,3 +1,5 @@
 <h1 style="color: red;">Aqui estarão as entradas!!</h1>
 
-<h2>Esse é o arquivo de template</h2>
+<h2>{{entradas}}</h2>
+
+<img src="{{img}}">
