--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 <h1>Login</h1>
-
+{{erro}}
 <form method="POST" action="/login">
     <input type="text" name="campoUsuario">
     <input type="password" name="camposSenha">
-    <input type="submit" name="Entrar">
+    <button>Entrar</button>
 </form>
